--- a/src/appsscript.json
+++ b/src/appsscript.json
@@ -1,6 +1,9 @@
 {
   "timeZone": "Europe/Moscow",
-  "dependencies": {
-  },
+  "dependencies": {},
+  "oauthScopes": [
+    "https://www.googleapis.com/auth/script.external_request",
+    "https://www.googleapis.com/auth/drive"
+  ],
   "exceptionLogging": "STACKDRIVER"
 }
