--- a/package.json
+++ b/package.json
@@ -2,29 +2,29 @@
   "name": "cloudconvert-gas",
   "version": "1.0.0",
   "description": "cloudconvert api for Google Apps Script",
-  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/oshliaer/cloudconvert-gas.git"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "gulp watch",
+    "prod": "gulp build",
+    "lnsett": "cd ./settings && rm -f .eslintrc && ln -s ./../src/.eslintrc .eslintrc",
+    "pull-dev": "cp ./settings/dev/.clasp.json ./ && json -I -f .clasp.json -e \"this.rootDir='src'\" && clasp pull",
+    "pull-prod": "cp ./settings/prod/.clasp.json ./ && json -I -f .clasp.json -e \"this.rootDir='src'\" && clasp pull"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/oshliaer/cloudconvert-gas/issues"
-  },
-  "homepage": "https://github.com/oshliaer/cloudconvert-gas#readme",
+  "license": "",
   "devDependencies": {
-    "@google/clasp": "^2.1.0",
-    "@types/google-apps-script": "0.0.39",
-    "eslint": "^5.15.3",
-    "eslint-config-google": "^0.12.0",
-    "eslint-config-prettier": "^4.1.0",
-    "eslint-plugin-googleappsscript": "^1.0.1",
-    "eslint-plugin-prettier": "^3.0.1",
-    "prettier": "^1.16.4"
+    "@google/clasp": "*",
+    "@types/google-apps-script": "*",
+    "clasp-types": "*",
+    "del": "*",
+    "eslint": "*",
+    "eslint-config-google": "*",
+    "eslint-config-prettier": "*",
+    "eslint-plugin-googleappsscript": "*",
+    "eslint-plugin-prettier": "*",
+    "gulp": "*",
+    "prettier": "*",
+    "json": "*"
   }
 }
